# experimental-agent

./: .coveragerc  .gitignore  .iterconfig.yml  AGENTS.md  CHANGELOG.md  README.md  agent  build_appimage.sh  commands.txt  info.txt  iterate.sh  pyproject.toml  start_gui.py  todo.txt  verzeichnisstruktur.txt
.github/workflows/: blank.yml  ci.yml
docs/: AUFGABENREIHENFOLGE.md  BESTPRACTICES.md  LAIENTIPPS.md  README.md  anleitung.md  examples.md  fehlermanagement.md  release.md  release_instructions.md  rotating_logger_rollback.md  weiterfuehrende_tipps.md
src/: __init__.py  beispiele.py  dashboard.py  globalsettings.py  gui.py  import_export.py  main.py  placeholder.done  placeholder.todo
src/modules/audioplayer/: gui.py  player.py
src/modules/settings/: __init__.py  backend.py  gui.py
src/modules/texttemplates/: __init__.py  backend.py  gui.py
src/modules/todo/: __init__.py  gui.py  model.py  storage.py
tests/: placeholder.todo  test_audioplayer.py  test_beispiele.py  test_gui.py  test_main.py  test_settings.py  test_texttemplates.py  test_todo.py
